docs(readme): add downloading and installation steps